# mocika-skills-cli

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: README.en.md  commands.md  design.md  requirements.md
docs/research/: TOOL_DETECTION_RESEARCH.md
docs/skm-skill/: README.en.md  README.md  SKILL.md
skills/skm/: README.en.md  README.md  SKILL.md
src/: error.rs  i18n.rs  lib.rs  main.rs  models.rs
src/cli/: agent_cmd.rs  backup.rs  config_cmd.rs  doctor.rs  install.rs  list.rs  mod.rs  relink.rs  scan.rs  search.rs  self_update.rs  source.rs  update.rs
src/core/: agent.rs  backup.rs  config.rs  git.rs  lock.rs  mod.rs  operations.rs  registry.rs  skill.rs  skm_config.rs  update.rs  updater.rs
