[package]
name = "skm"
version = "0.3.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[[bin]]
name = "skm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5"
which = "6"
indicatif = "0.17"
console = "0.15"
rayon = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
